# infant-abm

./: .gitignore  README.md  comparative.ipynb  open_results.ipynb  pso_vis.ipynb  pygame_predator_prey.py  pyproject.toml  readme.md  requirements.txt  run_simulation.py  run_simulation_v2.py  simple_abm.py  utils.ipynb  visualization.ipynb  visualization_v2.ipynb
.github/workflows/: lint.yml  pylint.yml  test.yml
boid_flockers/boid_flockers/: model.py  server.py
cont_model/: simulation.py
cont_model/boid_flockers/: agents.py  model.py  server.py  simple_continuous_canvas.js  simulation.py  utils.py
flockers/src/: main.rs
grid_model/: run.py
grid_model/toddler_abm/: agents.py  model.py  server.py  test_random_walk.py
infant_abm/: README.md  __init__.py  canvas.py  config.py  continuous_canvas.js  db_utils.py  model.py  run.py  run_genetic_simulation.py  run_simulation.py  server.py  simulation.py  utils.py
infant_abm/agents/: __init__.py  agent.py  infant.py  infant_actions.py  parameter.py  parent.py  parent_base.py  position.py  toy.py
infant_abm/genetic_model/: infant_genome.py
infant_abm/genetic_results/: ga_instance.pkl  ga_instance_0.pkl  ga_instance_1.pkl
infant_abm/plot_utils/: __init__.py
infant_abm/pso/: infant_particle.py
mesa/: demo.py  grid_search.py  open_results.html  run_genetic_simulation.py  run_pso_simulation.py  run_simulation.py  simulation.py  visualization_genetic.py
results/: run.csv  run.hdf
test/: test_mesa.py  test_q_learn.py  test_q_learn_detached.py
toddler_abm/: agents.py  model.py  server.py
(+64 files in other folders)
