[tool.poetry]
name = "toddler-abm"
version = "0.1.0"
description = ""
authors = ["Przemysław Rożnawski <roznawski.przemyslaw@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pip = "^23.3.1"
Mesa = "^2.1.2"
numpy = "^1.26.1"
matplotlib = "^3.8.2"
ruff = "^0.3.5"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
